--- a/lemon-sass/sass/main.sass
+++ b/lemon-sass/sass/main.sass
@@ -38,12 +38,12 @@ strong
 	font-family: 'OpenSansBold', sans-serif
 
 h1
-	font-size: 29px
+	font-size: 2.14em
 	font-weight: 400
 	text-align: center
 
 h2
-	font-size: 36px
+	font-size: 2.6em
 	text-align: center
 	color: #ff4eae
 	font-family: 'OpenSansBold', sans-serif
@@ -51,7 +51,7 @@ h2
 	padding: 0
 
 h3
-	font-size: 25px
+	font-size: 1.8em
 	color: #ff4eae
 	font-family: 'OpenSansBold', sans-serif
 	margin: 20px 0 12px 0
@@ -59,7 +59,7 @@ h3
 	text-align: center
 
 h4
-	font-size: 18px
+	font-size: 1.3em
 	text-align: center
 	margin: 30px 0 30px 0
 	font-weight: normal
@@ -94,7 +94,7 @@ h4
 
 input[type=text]
 	border: 0.5px solid #cbcbcb
-	font-size: 12px
+	font-size: 0.86em
 	font-weight: 300
 	width: 313px
 	height: 35px
@@ -105,7 +105,7 @@ input[type=text]
 	margin-top: 10px
 	margin-bottom: 0px
 	padding: 0px
-	font-size: 12px
+	font-size: 0.86em
 	font-weight: 400
 	line-height: 1
 
@@ -122,7 +122,7 @@ label
 	display: inline-block
 	padding-left: 10px;
 	font-family: "Myriad Pro"
-	font-size: 10px
+	font-size: 0.71em
 	font-weight: 400
 	line-height: 1.3
 
@@ -137,7 +137,7 @@ label
 	background-image: linear-gradient(to top, #ff4eae 0%, #ff76c0 100%);border: none
 	text-shadow: 0.5px 0.9px 4px rgba(154, 12, 89, 0.2)
 	color: white
-	font-size: 24px
+	font-size: 1.71em
 	font-weight: 700
 	text-transform: uppercase
 
